feat: update CaixaService to return saved entity ID and improve unit tests for service methods